Remove duplicated code between azureKeyVault and withAzureKeyvault